mostly fixed timing on main_showNotes.js from seconds to hh:mm:ss

--- a/episode-editor/app/index.html
+++ b/episode-editor/app/index.html
@@ -172,6 +172,7 @@
                       <!-- Standard button -->
                       <button type="button" class="btn btn-default" id="noteButtonEnter">Enter</button>
                       <button type="button" class="btn btn-default" id="noteButtonEdit">Edit</button>
+                      <button type="button" class="btn btn-default" id="noteButtonUpdate">Update</button>
                     </td>
                   </div>
                 </tr>
