cleaned upmain_showNotes.js, moved all the bits related to show notes into functions

--- a/episode-editor/app/index.html
+++ b/episode-editor/app/index.html
@@ -46,10 +46,8 @@
       </div>
 
       <div id="episode-list-panel">
-        <div id="episode-list-panel-show">
-        </div>
-        <div id="episode-list-panel-hide">
-        </div>
+        <div id="episode-list-panel-show"></div>
+        <div id="episode-list-panel-hide"></div>
       </div>
 
       <div id="showNotesPanel">
@@ -341,12 +339,13 @@
     <script src = "scripts/main_timeConversion.js"></script>
 
 
-    <!-- delete : delete_testHandlebars_2.js --> 
-    <script src = "scripts/delete_testHandlebars_2.js"></script>
-
-    <!-- delete : delete_testHandlebars.js --
-    <script src = "scripts/delete_testHandlebars.js"></script>
+    <!-- learn: handlebars (can be deleted) 
+    <script src = "scripts/learnHandlebars.js"></script>
     --> 
+
+    <!-- learn: templates (can be deleted)
+    <script src = "scripts/learnTemplates.js"></script>
+     --> 
 
 
     <!-- delete and make part of main_showNotesTable, or somthing else
