Delete Function Working
Made delete a global function ‘podlyGlobal.deleteEpisodeNote()’ under
main_deleteEpisodeNotes.js.

--- a/episode-editor/app/index.html
+++ b/episode-editor/app/index.html
@@ -116,7 +116,7 @@
 
 
           <!-- Add a show note -->
-          <div class="demoLineItem">
+          <div class="showNotesCreateArea">
             <!-- Hiding but keeping here for HTML referece, for when we make templates 
               <table class="table table-hover">
               <caption>Add a Show Note</caption>
@@ -236,11 +236,22 @@
     <script src = "scripts/ref_GlobalVarFunctions.js"></script>
 
 
-<!-- *** you are here *** -->
+
     <!-- build:js scripts/main_podcastUrl.js (handles read/write of podcast URL)-->
     <script src="scripts/main_showNoteCreator.js"></script> 
     <!-- endbuild  --> 
+
+
+
 <!-- *** you are here *** -->
+
+  <!-- build:js scripts/main_showNotesTable.js  -->
+    <script src="scripts/main_showNotesTable.js"></script>
+    <!-- endbuild -->
+
+<!-- *** you are here *** -->
+
+    <script src = "scripts/main_deleteEpisodeNote.js"></script>
 
 
     <script src = "scripts/main_audioControls.js"></script>
@@ -270,15 +281,9 @@
      <script src = "scripts/reference_callGlobalVarsAndFunctions.js"></script>
      -->
 
+  
     
-
-
-    <script src = "scripts/deleteEpisodeNote.js"></script>
-    
-    <!-- build:js scripts/main_showNotesTable.js  --
-    <script src="scripts/main_showNotesTable.js"></script>
-    <!-- endbuild -->
-
+  
 
  
 
