--- a/episode-editor/app/embed.html
+++ b/episode-editor/app/embed.html
@@ -64,6 +64,9 @@
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/firebase/firebase.js"></script>
+    <script src="/bower_components/handlebars/handlebars.js"></script>
+    <script src="/bower_components/moment/moment.js"></script>
+    <script src="/bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -89,16 +92,16 @@
     <!-- endbuild -->  
 
 
-    <!-- build:js scripts/main.js -->
+    <!-- build:js scripts/main.js --
     <script src="scripts/main_V2.js"></script>
     <!-- endbuild -->
 
-    <!-- build:js scripts/podcastTitle.js (displays the title of the podcast) -->
+    <!-- build:js scripts/podcastTitle.js (displays the title of the podcast) --
     <script src="scripts/podcastTitle.js"></script>
     <!-- endbuild -->  
 
 
-    <!-- build:js scripts/main_podcastUrl.js (handles read/write of podcast URL) -->
+    <!-- build:js scripts/main_podcastUrl.js (handles read/write of podcast URL) --
     
     <script src="bower_components/moment/moment.js"></script>
     <script src="scripts/main_showNotes.js"></script>
