made audioUrl dynamic in writeEmbedMagic.js
made audioUrl dynamic variable in writeEmbedMagic.js, previously it was
a static string.  now it pings the database, based on which episode
number is in the url after ?

--- a/episode-editor/app/embed2.html
+++ b/episode-editor/app/embed2.html
@@ -135,7 +135,7 @@
     <!-- Twitter Widget --> 
     <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
     
-    <script src="scripts/writeEmbedMagic.js"></script> 
+    <script src="scripts/writeEmbedMagic2.js"></script> 
        <!--  <script>
       window.twttr = (function(d, s, id) {
           var js, fjs = d.getElementsByTagName(s)[0],
