--- a/episode-editor/app/index.html
+++ b/episode-editor/app/index.html
@@ -59,7 +59,7 @@
 
           <!-- Title of Podcast from Firebase -->
           <div class="podcastTitle" alt="podcast title">
-            <h3>Heal Yourself Radio</h3>
+            <h3>It's story time!</h3>
           </br>
 
             
