added loading bar
to embed.html via writeEmbedMagic.js

--- a/episode-editor/app/index.html
+++ b/episode-editor/app/index.html
@@ -263,6 +263,9 @@
     <!-- main_episodeHighLevel.js -->
      <script src = "scripts/main_episodeHighLevel.js"></script>
 
+
+     <!-- delete : <script src = "main_urlShorten.js"></script> --> 
+
     
 
 
