--- a/episode-editor/app/embed.html
+++ b/episode-editor/app/embed.html
@@ -83,7 +83,7 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
 
-    <!-- build:js scripts/utils.js  -->
+    <!-- build:js scripts/utils/LoadingIndicator.js  -->
     <script src="scripts/utils/LoadingIndicator.js"></script>
     <!-- endbuild -->
 
