Fix LoadingIndicator.js not being loaded when the app is deployed

--- a/episode-editor/app/embed.html
+++ b/episode-editor/app/embed.html
@@ -83,9 +83,9 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
 
-    <!-- build:js scripts/utils.js  -->
+    <!-- Load utils scripts -->
     <script src="scripts/utils/LoadingIndicator.js"></script>
-    <!-- endbuild -->
+
 
     <!-- build:js scripts/main_showNotesTable.js  --
     //<script src="scripts/main_showNotesTable.js"></script>
