--- a/episode-editor/app/splash/earlyaccess.html
+++ b/episode-editor/app/splash/earlyaccess.html
@@ -30,12 +30,14 @@
         <br>Sign up for early access.&nbsp;&nbsp;</p>
       <div class="w-form sign-up-form">
         <form class="w-clearfix" name="wf-form-signup-form" data-name="Signup Form">
-          <input class="w-input field" type="email" placeholder="Enter your email address" name="email" data-name="Email" required="required">
+          <input class="w-input field" id="userEmail" type="email" placeholder="Enter your email address" name="email" data-name="Email" required="required">
           <input class="w-button button" type="submit" value="Get Notified" data-wait="Please wait...">
         </form>
         <div class="w-form-done success-message">
-          <p>Awesome! You have been added to our list.&nbsp;</p>
-          <p class="referal-text">Help spread the word:</p>
+          <p>Awesome! We'll be in touch soon :) &nbsp;</p>
+          <!-- 
+          <p class="referal-text">We'll let you know when early access is ready!</p>
+          
           <div class="w-widget w-widget-twitter share-button">
             <iframe src="https://platform.twitter.com/widgets/tweet_button.html#url=http%3A%2F%2Fwebflow.com&amp;counturl=webflow.com&amp;text=Check%20out%20this%20site&amp;count=vertical&amp;size=m&amp;dnt=true" scrolling="no" frameborder="0" allowtransparency="true" style="border: none; overflow: hidden; width: 55px; height: 62px;"></iframe>
           </div>
@@ -45,10 +47,11 @@
           <div class="w-widget w-widget-gplus share-button google">
             <div class="g-plusone" data-href="http://webflow.com" data-size="tall" data-annotation="bubble" data-width="120" data-recommendations="false" id="___plusone_0" style="width: 50px; height: 60px; text-indent: 0px; margin: 0px; padding: 0px; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; background: transparent;"></div>
           </div>
-        </div>
+        </div> 
         <div class="w-form-fail error-message">
           <p>Oops! Something went wrong while submitting the form. :(</p>
         </div>
+        --> 
       </div>
     </div>
   </div>
@@ -67,6 +70,7 @@
     </div>
   </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/earlyAccess_emails.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
   <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
