--- a/episode-editor/app/index.html
+++ b/episode-editor/app/index.html
@@ -207,6 +207,7 @@
     <script src="/bower_components/handlebars/handlebars.js"></script>
     <script src="/bower_components/moment/moment.js"></script>
     <script src="/bower_components/underscore/underscore.js"></script>
+    <script src="/bower_components/sticky-kit/jquery.sticky-kit.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
