--- a/episode-editor/app/embed.html
+++ b/episode-editor/app/embed.html
@@ -12,7 +12,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css --
+    <!-- bower:css --> 
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -93,67 +93,18 @@
     <script src="scripts/utils/LoadingIndicator.js"></script>
 
 
-    <!-- build:js scripts/main_showNotesTable.js  --
-    //<script src="scripts/main_showNotesTable.js"></script>
-    <!-- endbuild -->
-
-
-    <!-- build:js scripts/main.js --
-    <script src="scripts/main_V2.js"></script>
-    <!-- endbuild -->
-
-    <!-- build:js scripts/podcastTitle.js (displays the title of the podcast) --
-    <script src="scripts/podcastTitle.js"></script>
-    <!-- endbuild -->
-
-
-    <!-- build:js scripts/main_podcastUrl.js (handles read/write of podcast URL) --
-
-    <script src="bower_components/moment/moment.js"></script>
-    <script src="scripts/main_showNotes.js"></script>
-    <!-- endbuild -->
-
-    <!--Hide, all this is from demo.html--
-    <script src = "scripts/main_showNotesPlayButton.js"></script>
-
-
-
-    <script src="scripts/writeTableOnly.js"></script>
-
-    <script src="scripts/writeEpisodeHeaders.js"></script>
-
-    -->
+    
 
     <!-- <script src="scripts/writeEpisodeNumberFromUrl.js"></script> -->
-    <script src="http://heartcode-canvasloader.googlecode.com/files/heartcode-canvasloader-min-0.9.1.js"></script>
+    <script src="https://heartcode-canvasloader.googlecode.com/files/heartcode-canvasloader-min-0.9.1.js"></script>
 
     <!-- Twitter Widget -->
-    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+    <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
 
     <!-- Load writeEmbedMagic.js last as it needs all dependencies above it -->
     <script src="scripts/writeEmbedMagic.js"></script>
 
     
-
-
-
-
-    <!--Delete
-    <script type="scripts/writeUrlTime.js"></script>
-    -->
-
-
-
-
-
-
-    <!-- build:js scripts/addSection.js (this adds a section to the podcast DB for "title")
-    <script src="scripts/addSection.js"></script>
-    <!-- endbuild -->
-
-    <!-- build:js scripts/createDemoPodcast.js
-    <script src="scripts/createPodcastBranch.js"></script>
-    <!-- endbuild -->
 
 
 
