--- a/episode-editor/app/platform.html
+++ b/episode-editor/app/platform.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css(.) styles/vendor.css -->
@@ -81,8 +81,6 @@
       </div> 
 
 
-
-
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/modernizr/modernizr.js"></script>
@@ -91,7 +89,6 @@
     <script src="/bower_components/handlebars/handlebars.js"></script>
     <script src="/bower_components/moment/moment.js"></script>
     <script src="/bower_components/underscore/underscore.js"></script>
-    <script src="/bower_components/sticky-kit/jquery.sticky-kit.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -112,7 +109,7 @@
     <!-- endbuild -->
 
     <!-- sticky: used to affix top --> 
-    <!--<script src="scripts/scripts/jquery.sticky-kit.min.js"></script>--> 
+    <script src="scripts/jquery.sticky-kit.min.js"></script>
 
     <!-- build:js scripts/utils/LoadingIndicator.js  -->
     <!-- Load utils scripts -->
