Testing Auto Embed Sizing

--- a/episode-editor/app/embed.html
+++ b/episode-editor/app/embed.html
@@ -25,6 +25,12 @@
     <!-- infoNav.css is used to style firebase info -->
     <link rel="stylesheet" href="styles/infoNav.css">
 
+    <!-- iFrame Resizer (iframeSizer.contentWindow.min.js) - v3.5.0 - 2015-10-26
+     *  Desc: Include this file in any page being loaded into an iframe
+     *        to force the iframe to resize to the content size.
+     *  Requires: iframeResizer.min.js on host page.
+     -->
+    
 
   </head>
   <body>
@@ -105,8 +111,6 @@
     <script src="scripts/writeEmbedMagic.js"></script>
 
     
-
-
 
 
   </body>
