Added List of Episodes to Platform.html
Currently it’s below the show notes, but I’ll be using CSS to move it
to the left of them on desktop and something else for mobile.

--- a/episode-editor/app/platform.html
+++ b/episode-editor/app/platform.html
@@ -79,6 +79,9 @@
         </div> 
       <!-- End panel --> 
       </div> 
+    <div class="episodeList">
+
+    </div>
 
 
     <!-- build:js(.) scripts/vendor.js -->
@@ -156,6 +159,9 @@
     <script src="scripts/writeEmbedMagic.js"></script> 
 
     <script src="scripts/platformSpecific.js"></script>
+
+
+    <script src="scripts/platformSpecific_episodeList.js"></script>
     
     
    
